--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -1,4 +1,4 @@
-<Project Sdk="FSharp.NET.Sdk;Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
@@ -6,13 +6,11 @@
   <ItemGroup>
     <Compile Include="Shared/Domain.fs" />
     <Compile Include="ServerTypes.fs" />
-    <Compile Include="Token.fs" />
-    <Compile Include="JsonUtils.fs" />
+    <Compile Include="JsonWebToken.fs" />
     <Compile Include="Auth.fs" />
     <Compile Include="WishList.fs" />
     <Compile Include="Server.fs" />
     <Compile Include="Program.fs" />
-    <PackageReference Include="FSharp.NET.Sdk" Version="1.0.*" PrivateAssets="All" />
     <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="1.0.0" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
