--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -11,7 +11,7 @@
     <Compile Include="pages/WishList.fs" />
     <Compile Include="pages/Login.fs" />
     <Compile Include="App.fs" />
-    <!--Keep this version synced with dotnet-fable in .fsproj-->
+    <!--Keep this version synced with Fable.Core in paket.dependencies -->
     <DotNetCliToolReference Include="dotnet-fable" Version="1.1.6" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
