--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "babel-loader": "^7.1.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "concurrently": "^3.5.0",
     "fable-loader": "^1.0.5",
+    "fable-utils": "^1.0.4",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.5.0",
-    "concurrently": "^3.5.0"
+    "webpack-dev-server": "^2.5.0"
   },
   "scripts": {
     "prebuildServer": "dotnet restore src/Server/Server.fsproj",
