--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ReleaseNotes.fs" />
     <Compile Include="../Server/Shared/Domain.fs" />
     <Compile Include="Messages.fs" />
     <Compile Include="Style.fs" />
