--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "private": true,
   "dependencies": {
-    "babel-runtime": "^6.26.0",
-    "react": "^15.6.2",
-    "react-bootstrap": "^0.31.3",
-    "react-dom": "^15.6.2",
-    "remotedev": "^0.2.7"
+    "babel-runtime": "6.26.0",
+    "react": "16.0.0",
+    "react-bootstrap": "0.31.3",
+    "react-dom": "16.0.0",
+    "remotedev": "0.2.7"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "concurrently": "^3.5.0",
-    "fable-loader": "^1.1.2",
-    "fable-utils": "^1.0.6",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.8.2"
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-es2015": "6.24.1",
+    "concurrently": "3.5.0",
+    "fable-loader": "1.1.2",
+    "fable-utils": "1.0.6",
+    "webpack": "3.6.0",
+    "webpack-dev-server": "2.9.1"
   },
   "scripts": {
     "prebuildServer": "dotnet restore src/Server/Server.fsproj",
