--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -3,6 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="HMR.fs" />
     <Compile Include="ReleaseNotes.fs" />
     <Compile Include="../Server/Shared/Domain.fs" />
     <Compile Include="Messages.fs" />
