--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-es2015": "6.24.1",
+    "babel-preset-env": "^1.6.0",
     "concurrently": "3.5.0",
     "fable-loader": "1.1.3",
     "fable-utils": "1.0.6",
