--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "babel-runtime": "6.26.0",
     "react": "16.0.0",
     "react-bootstrap": "0.31.3",
