--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
+    "babel-polyfill": "6.26.0",
     "babel-runtime": "6.26.0",
     "react": "16.0.0",
     "react-bootstrap": "0.31.3",
@@ -12,7 +12,7 @@
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "1.6.0",
     "concurrently": "3.5.0",
     "fable-loader": "1.1.3",
     "fable-utils": "1.0.6",
